2012-04-11  Rafael Brandao  <rafael.lobo@openbossa.org>

        Adding myself to committers.py
        https://bugs.webkit.org/show_bug.cgi?id=83711

        Unreviewed update to committers.py.

        * Scripts/webkitpy/common/config/committers.py:

2012-04-11  Sudarsana Nagineni  <sudarsana.nagineni@linux.intel.com>

        [EFL] LayoutTestController needs implementation of pageProperty
        https://bugs.webkit.org/show_bug.cgi?id=82449

        Add missing implementation pageProperty to EFL's LayoutTestController
        in order to unskip printing/page-rule-selection.html

        Reviewed by Antonio Gomes.

        * DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
        (LayoutTestController::pageProperty):

2012-04-11  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r113836.
        http://trac.webkit.org/changeset/113836
        https://bugs.webkit.org/show_bug.cgi?id=83705

        Broke all the WebKit2 inspector tests (Requested by andersca
        on #webkit).

        * WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl:
        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
        (WTR::LayoutTestController::showWebInspector):
        (WTR::LayoutTestController::closeWebInspector):
        (WTR::LayoutTestController::evaluateInWebInspector):
        (WTR::LayoutTestController::setJavaScriptProfilingEnabled):
        * WebKitTestRunner/InjectedBundle/LayoutTestController.h:
        (LayoutTestController):
        * WebKitTestRunner/TestInvocation.cpp:
        (WTR::TestInvocation::invoke):

2012-04-11  Vivek Galatage  <vivekgalatage@gmail.com>

        Web Inspector: Disabling Inspector causes build failure on Windows
        https://bugs.webkit.org/show_bug.cgi?id=83557

        Reviewed by Pavel Feldman.

        The calls to inspector APIs are not put under ENABLE(INSPECTOR) guard.
        This change brings all such API calls under the guard.
